Opened 15 years ago
Closed 13 years ago
#670 closed bug (fixed)
alt-esc won't work for menu traversal with <- and ->
Reported by: | Owned by: | jackburton | |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | diver, axeld | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Not sure if this is the right category. Pressing alt and escape won't allow to traverse the top application menu (File, Edit etc.) with the keyboard arrows like in R5.
Change History (8)
comment:1 by , 15 years ago
Cc: | added |
---|
comment:2 by , 14 years ago
Status: | new → assigned |
---|
follow-up: 4 comment:3 by , 14 years ago
follow-ups: 5 7 comment:4 by , 14 years ago
Description: | modified (diff) |
---|---|
Platform: | → All |
I had the chance to test the BeOS menu behaviour (after so much time) and here's what I found.
In beos, when a menu window is opened, clicking on a menubar on a different window doesn't make it open a menu. Actually, clicking on any view on another window doesn't produce a MouseDown event in that view (except if the view has the B_ACCEPT_FIRST_CLICKS flag). This isn't the case in haiku.
Test case:
- Open Terminal
- Click on the "Terminal" menu item
- Click with the right mouse button on the desktop tracker window.
In BeOS: The Terminal menu will close In Haiku: The Terminal menu will close, and the desktop context menu will open.
This causes many kinds of problems, and AFAIK is is only fixable in the app server, right ? Axel ?
comment:5 by , 14 years ago
Replying to jackburton:
Looking in WindowLayer.cpp (WindowLayer::MouseDown()) I found this: eat the click if we don't accept first click if ((Flags() & (B_WILL_ACCEPT_FIRST_CLICK | B_AVOID_FOCUS)) == 0)
return;
This doesn't make much sense to me. We aren't exiting the loop if the window has the B_AVOID_FOCUS flag set.
comment:6 by , 14 years ago
Cc: | added |
---|---|
Status: | assigned → new |
comment:7 by , 14 years ago
Replying to jackburton:
I had the chance to test the BeOS menu behaviour (after so much time) and here's what I found.
In beos, when a menu window is opened, clicking on a menubar on a different window doesn't make it open a menu. Actually, clicking on any view on another window doesn't produce a MouseDown event in that view (except if the view has the B_ACCEPT_FIRST_CLICKS flag). This isn't the case in haiku.
Actually this very issue seems to have been fixed in hrev19857. The original bug still remains, though.
comment:8 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Works since a few revisions, or at least, since hrev23389
ALT-ESC now (since hrev18517) opens the menu. But you can't navigate it yet, because menu window don't get keyboard focus yet.