* The app_server now gives top-most menus the keyboard focus. * BMenuWindow now makes its menu focus view, so that it can receive key events. * Keyboard navigation doesn't work as it should though, that is bug #670 is   still valid - there should even be another recently opened bug about this,   but Trac obviously ate it :-/

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@19152 a95241bf-73f2-0310-859d-f6bbb57e9c96